{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 24,
  "lineage": "b308f7ae-0592-e20b-1c01-4f6d9d04b510",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkInterfaces/app-network",
            "internal_domain_name_suffix": "yww2rbbz0jwurc1sgscc51dwoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/appsubnet"
              }
            ],
            "location": "westus",
            "mac_address": "60-45-BD-02-43-00",
            "name": "app-network",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "KPMG",
            "virtual_machine_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Compute/virtualMachines/VM-DEV-APP"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.appsubnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkInterfaces/web-network",
            "internal_domain_name_suffix": "yww2rbbz0jwurc1sgscc51dwoh.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/websubnet"
              }
            ],
            "location": "westus",
            "mac_address": "00-0D-3A-59-18-17",
            "name": "web-network",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "KPMG",
            "virtual_machine_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Compute/virtualMachines/VM-DEV-WEB"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.websubnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/appsubnet",
            "name": "appsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "KPMG",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/dbsubnet",
            "name": "dbsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "KPMG",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/websubnet",
            "name": "websubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "KPMG",
            "virtual_network_name": "vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "84c8adc5-d239-486d-8b72-34842fec7677",
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "westus",
            "name": "vnet01",
            "resource_group_name": "KPMG",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/websubnet",
                "name": "websubnet"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/appsubnet",
                "name": "appsubnet"
              }
            ]
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westus",
            "name": "app-nsg",
            "resource_group_name": "KPMG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westus",
            "name": "db-nsg",
            "resource_group_name": "KPMG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westus",
            "name": "web-nsg",
            "resource_group_name": "KPMG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.KPMG"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/appsubnet",
            "network_security_group_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/appsubnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.appsubnet",
            "module.resourcegroup.azurerm_resource_group.KPMG",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/dbsubnet",
            "network_security_group_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/dbsubnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.dbsubnet",
            "module.networking.azurerm_virtual_network.vnet01",
            "module.resourcegroup.azurerm_resource_group.KPMG",
            "module.securitygroup.azurerm_network_security_group.db-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/websubnet",
            "network_security_group_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/a2ae11d7-5c75-43e8-8199-defb522f2848/resourceGroups/KPMG/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/websubnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.websubnet",
            "module.resourcegroup.azurerm_resource_group.KPMG",
            "module.securitygroup.azurerm_network_security_group.web-nsg"
          ]
        }
      ]
    }
  ]
}